package src.com.cyq.design.工厂模式.多工厂模式;


public abstract class Factory {
    public abstract Product createProduct();
}
