@startuml
abstract class Factory{
    + abstract Product createProduct()
}
class Product1Factory{
   + Product1 createProduct()
}
class Product2Factory{
   + Product2 createProduct()
}
class Product3Factory{
   + Product3 createProduct()
}

Product1Factory -up-|> Factory
Product2Factory -up-|> Factory
Product3Factory -up-|> Factory
@enduml